--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     font-family: sans-serif;
     padding: 0;
     margin: 0;
-    background: url("/images/Strawberries.jpg");
+    background: url("./images/Strawberries.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
